# Bestia

./: Bestia.sln  CMakeLists.txt  README.md
Bestia/: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSprite.hpp  Bestia.cpp  Bestia.h  Bestia.vcxproj  Bestia.vcxproj.filters  CMakeLists.txt  EGameState.h  Game.h
Bestia/Animation/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.h  FadeEffect.cpp  FadeEffect.h  MoveEffect.cpp  MoveEffect.h
Bestia/Brain/: Brain.h  IFood.h
Bestia/EventSystem/: Event.h  EventCaller.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.h  EventQueue.h  Events.cpp  Events.h  System.cpp  System.h  Timer.cpp  Timer.h
Bestia/ExtendedSFML/: RoundedRectangleShape.cpp  RoundedRectangleShape.h
Bestia/Gui/: Button.cpp  Button.h  DrawableList.h  Window.cpp  Window.h
Bestia/Menu/: DrawableList.cpp  DrawableList.h  MainMenu.cpp  MainMenu.h  Menu.h  MenuOption.cpp  MenuOption.h  Text.cpp  Text.h
Bestia/Scene/: Layers.h  Scene.h
Bestia/Scenes/: MainMenuScene.h
Bestia/System/: GameManager.h  GameObject.cpp  GameObject.h  Time.h
Bestia/System/EventSystem/: Event.h  EventDispatcher.h  EventQueue.h  System.cpp  System.h  Timer.cpp
Bestia/Utils/: CommonFcn.cpp  CommonFcn.h  Defs.h  DrawableList.cpp  DrawableList.h  Log.h  Text.cpp  Text.h
Bestia/src/: main.cpp
